@@ -2,10 +2,13 @@ version 0.991
 - streamline the online help system
 - in GUI, allow deletion of any variable (popup menu)
 - go to a two-dimensional data array (needs more testing)
-- put in some checks for attempting to do things with a model
-  after clearing the data set
 - get the data status indicator working better when the nulldata
   command is used
+- add menu items to set missing value codes for a particular
+  series or the entire data set
+- changing or clearing the data set closes all model and
+  stats windows
+- add scalar datatype
 
 02/27/2002 version 0.99
 - add option for HTTP proxy when contacting gretl data server
